--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jan Kowalski - Portfolio Full Stack Developer</title>
+    <title>Kret - Portfolio Full Stack Developer</title>
     
     <!-- Tailwind CSS (Style) -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -93,7 +93,7 @@
             <div class="flex justify-between h-16 items-center">
                 <div class="flex-shrink-0 flex items-center gap-2 cursor-pointer" onclick="window.scrollTo(0,0)">
                     <i class="fa-solid fa-code text-brand-600 text-2xl"></i>
-                    <span class="font-bold text-xl tracking-tight text-slate-900">JK<span class="text-brand-600">Dev</span></span>
+                    <span class="font-bold text-xl tracking-tight text-slate-900">Via<span class="text-brand-600">Code</span></span>
                 </div>
                 
                 <!-- Menu Desktop -->
@@ -129,7 +129,7 @@
         <div class="text-center fade-in-up" style="animation-delay: 0.1s;">
             <span class="bg-brand-100 text-brand-600 text-sm font-semibold px-4 py-1 rounded-full mb-4 inline-block">Dostępny do współpracy</span>
             <h1 class="text-4xl md:text-6xl font-bold text-slate-900 tracking-tight mb-6">
-                Cześć, jestem Jan. <br>
+                Cześć, jestem Kret. <br>
                 <span class="text-transparent bg-clip-text bg-gradient-to-r from-brand-600 to-purple-600">Buduję rzeczy w sieci.</span>
             </h1>
             <p class="mt-4 max-w-2xl mx-auto text-xl text-slate-500 mb-10">
@@ -140,7 +140,7 @@
                 <a href="#projekty" class="px-8 py-3 rounded-full bg-brand-600 text-white font-semibold hover:bg-brand-700 transition-all shadow-lg shadow-brand-500/30 flex items-center gap-2">
                     <i class="fa-solid fa-folder-open"></i> Zobacz Projekty
                 </a>
-                <a href="https://github.com" target="_blank" class="px-8 py-3 rounded-full bg-white text-slate-700 border border-slate-200 font-semibold hover:bg-slate-50 hover:border-slate-300 transition-all flex items-center gap-2">
+                <a href="https://github.com/kret-ai" target="_blank" class="px-8 py-3 rounded-full bg-white text-slate-700 border border-slate-200 font-semibold hover:bg-slate-50 hover:border-slate-300 transition-all flex items-center gap-2">
                     <i class="fa-brands fa-github"></i> GitHub
                 </a>
             </div>
@@ -160,13 +160,13 @@
                 <div class="p-6 rounded-2xl bg-slate-50 hover:shadow-lg transition-all hover:-translate-y-1 group">
                     <i class="fa-brands fa-js text-4xl text-yellow-400 mb-4 group-hover:scale-110 transition-transform"></i>
                     <h3 class="font-bold text-lg">JavaScript</h3>
-                    <p class="text-sm text-slate-400 mt-2">ES6+, Gry, DOM</p>
+                    <p class="text-sm text-slate-400 mt-2">Gry, Strony internetowe</p>
                 </div>
                 <!-- Skill 2 -->
                 <div class="p-6 rounded-2xl bg-slate-50 hover:shadow-lg transition-all hover:-translate-y-1 group">
                     <i class="fa-brands fa-python text-4xl text-blue-500 mb-4 group-hover:scale-110 transition-transform"></i>
                     <h3 class="font-bold text-lg">Python</h3>
-                    <p class="text-sm text-slate-400 mt-2">Django, Skrypty</p>
+                    <p class="text-sm text-slate-400 mt-2">Gry, Skrypty, Boty Discord</p>
                 </div>
                 <!-- Skill 3 -->
                 <div class="p-6 rounded-2xl bg-slate-50 hover:shadow-lg transition-all hover:-translate-y-1 group">
@@ -207,7 +207,7 @@
                     <div class="p-6 flex-1 flex flex-col">
                         <div class="flex items-center gap-2 mb-3">
                             <span class="px-2 py-1 bg-purple-100 text-purple-700 text-xs font-bold rounded">GRA JS</span>
-                            <span class="text-slate-400 text-xs"><i class="fa-regular fa-clock"></i> 2024</span>
+                            <span class="text-slate-400 text-xs"><i class="fa-regular fa-clock"></i> 2025</span>
                         </div>
                         <h3 class="text-xl font-bold mb-2">Refleks Mistrza</h3>
                         <p class="text-slate-600 text-sm mb-4 flex-1">
@@ -266,21 +266,15 @@
         <div class="max-w-3xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <h2 class="text-3xl font-bold text-slate-900 mb-6">Skontaktuj się ze mną</h2>
             <p class="text-slate-500 mb-10">
-                Masz pomysł na projekt? Chcesz mnie zatrudnić? A może po prostu chcesz pogadać o kodzie?
+                Masz pomysł na projekt? A może po prostu chcesz pogadać o kodzie?
                 Napisz śmiało!
             </p>
             <div class="flex justify-center gap-6 mb-12">
-                <a href="mailto:email@przyklad.com" class="flex flex-col items-center gap-2 group">
+                <a href="mailto:projektviacode@gmail.com" class="flex flex-col items-center gap-2 group">
                     <div class="w-16 h-16 bg-brand-50 rounded-full flex items-center justify-center group-hover:bg-brand-600 transition-colors">
                         <i class="fa-solid fa-envelope text-brand-600 text-2xl group-hover:text-white transition-colors"></i>
                     </div>
                     <span class="text-sm font-medium text-slate-600">Email</span>
-                </a>
-                <a href="#" class="flex flex-col items-center gap-2 group">
-                    <div class="w-16 h-16 bg-brand-50 rounded-full flex items-center justify-center group-hover:bg-blue-700 transition-colors">
-                        <i class="fa-brands fa-linkedin-in text-brand-600 text-2xl group-hover:text-white transition-colors"></i>
-                    </div>
-                    <span class="text-sm font-medium text-slate-600">LinkedIn</span>
                 </a>
                 <a href="#" class="flex flex-col items-center gap-2 group">
                     <div class="w-16 h-16 bg-brand-50 rounded-full flex items-center justify-center group-hover:bg-slate-900 transition-colors">
@@ -290,7 +284,7 @@
                 </a>
             </div>
             <div class="p-8 bg-slate-50 rounded-2xl border border-slate-100">
-                <p class="text-slate-400 text-sm">© 2024 Jan Kowalski. Wszelkie prawa zastrzeżone.</p>
+                <p class="text-slate-400 text-sm">© 2025 Kret. Wszelkie prawa zastrzeżone.</p>
             </div>
         </div>
     </section>
@@ -508,7 +502,7 @@ sorted_data = bubble_sort(data)
             const text = `
 RAPORT FINANSOWY - WERSJA DEMO
 Wygenerowano: ${new Date().toLocaleString()}
-Autor: Jan Kowalski
+Autor: Kret
 
 ----------------------------------------
 To jest przykładowy plik wygenerowany dynamicznie 
