Update Discord links in index.html

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <button onclick="showPage('projekty')" class="px-8 py-4 rounded-full bg-brand-600 text-white font-semibold hover:bg-brand-700 transition-all shadow-xl shadow-brand-500/30 flex items-center gap-2 transform hover:scale-105">
                             <i class="fa-solid fa-folder-open"></i> Zobacz Projekty
                         </button>
-                        <a href="https://discord.gg/twojserwer" target="_blank" class="px-8 py-4 rounded-full bg-[#5865F2] text-white font-semibold hover:bg-[#4752C4] transition-all flex items-center gap-2 shadow-xl shadow-indigo-500/30 transform hover:scale-105">
+                        <a href="https://discord.gg/bNQdbwscRW" target="_blank" class="px-8 py-4 rounded-full bg-[#5865F2] text-white font-semibold hover:bg-[#4752C4] transition-all flex items-center gap-2 shadow-xl shadow-indigo-500/30 transform hover:scale-105">
                             <i class="fa-brands fa-discord"></i> Dołącz do Discorda
                         </a>
                     </div>
@@ -431,7 +431,7 @@
                         </a>
 
                         <!-- Discord (GŁÓWNY) -->
-                        <a href="https://discord.gg/twojserwer" target="_blank" class="flex flex-col items-center gap-4 p-8 bg-white rounded-2xl border border-discord-500/30 hover:border-discord-500 hover:shadow-2xl hover:shadow-discord-500/20 transition-all group relative overflow-hidden transform hover:-translate-y-2">
+                        <a href="https://discord.gg/bNQdbwscRW" target="_blank" class="flex flex-col items-center gap-4 p-8 bg-white rounded-2xl border border-discord-500/30 hover:border-discord-500 hover:shadow-2xl hover:shadow-discord-500/20 transition-all group relative overflow-hidden transform hover:-translate-y-2">
                             <div class="absolute inset-0 bg-discord-50 opacity-0 group-hover:opacity-100 transition-opacity"></div>
                             <div class="w-20 h-20 bg-discord-500 rounded-full flex items-center justify-center group-hover:scale-110 transition-transform z-10 shadow-lg">
                                 <i class="fa-brands fa-discord text-white text-4xl"></i>
